# edge-device

./: .gitignore  docker-compose.yml  package-lock.json
edge-backend/: Dockerfile  README.md  entrypoint-python.sh  get_ip.sh  mkdocs.yml  pyproject.toml  requirements.txt
edge-backend/app/: dependencies.py  main.py  utils.py
edge-backend/app/backend/models/: Crop.py  FileHandler.py  FilterHandler.py  FilterProcessor.py  ImageFilter.py  ModelHandler.py  ModelHandlerInterface.py  ModelType.py  OPC.py  PredictFilter.py  Predictor.py  StatusHandler.py  StatusType.py  VideoStream.py
edge-backend/app/backend/services/: image_processing.py
edge-backend/app/core/: openapi.py
edge-backend/app/routes/: Crop.py  Filter.py  Model.py  Predict.py  Video.py
edge-backend/app/sql_app/: crud.py  db_manager.py  models.py  schemas.py
edge-backend/app/tests/: test_core.py  test_main.py
edge-backend/app/tests/backend/models/: test_crop.py  test_file_handler.py  test_model_handler.py  test_model_type.py  test_video_stream.py
edge-backend/app/tests/routes/: test_crop.py  test_filter.py  test_predict.py
edge-backend/docs/: index.md
edge-backend/docs/methods/: dependencies.md
edge-backend/docs/methods/backend/models/: Crop.md  FileHandler.md  Filter.md  ModelHandler.md  ModelHandlerInterface.md  ModelType.md  OPC.md  VideoStream.md
edge-backend/docs/methods/routes/: Crop.md  Filter.md  Model.md  Predict.md  Video.md
edge-backend/docs/methods/sql_app/: crud.md  database.md  models.md  schemas.md
edge-backend/site/: 404.html  index.html  objects.inv
edge-backend/site/methods/backend/models/Converter/: index.html
edge-backend/site/methods/backend/models/Crop/: index.html
edge-backend/site/methods/backend/models/File/: index.html
edge-backend/site/methods/backend/models/Filter/: index.html
edge-backend/site/methods/backend/models/Inferencia/: index.html
edge-backend/site/methods/backend/models/OPC/: index.html
edge-backend/site/methods/backend/models/Stream/: index.html
edge-backend/site/methods/core/openapi/: index.html
edge-backend/site/methods/main/: index.html
edge-backend/site/methods/sql_app/crud/: index.html
edge-backend/site/methods/sql_app/database/: index.html
edge-backend/site/methods/sql_app/models/: index.html
edge-backend/site/methods/sql_app/schemas/: index.html
edge-device/: Dockerfile  README.md  flows.json
edge-frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
edge-frontend/public/styles/: marquee.css  style.css
edge-frontend/src/: main.js  roi.js
edge-frontend/src/utils/: utils.js
inference-model-cloud-raspberry4/: Dockerfile  requirements.txt
inference-model-cloud-raspberry4/app/: main.py
inference-model-cloud-raspberry4/app/model/: inference_model.py
inference-model-cloud-raspberry4/app/routes/: manager_model_route.py
inference-model-cloud-raspberry4/app/services/: inference_model_cloud.py  manager_model.py
inferencia-js/: Dockerfile  index.js  package-lock.json  package.json
sodalens/: README.md  capture.sh  docker-installer.sh  main.py  update.sh  zipper.sh
